force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/leaseworks__Utilization_Report_Staging__c.object-meta.xml
<CustomObject>
    <description>The system utilizes this temporary table as a staging area to consolidate and create utilization records for assets, their assemblies, linked invoices, and corresponding payments for all involved assemblies. This allows for efficient processing in one go. After successful data transfer, the temporary table is emptied.
[MODULE: Contract]
[LOAD: Yes]
[PREREQUISITES: Asset, Lease]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Utilization Staging</label>
    <nameField>
        <label>Monthly Utilization Staging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utilization Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>