force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__AF_CSN_as_per_Airline__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__AF_CSN_as_per_Airline__c</fullName>
    <description>CSN that is communicated by airline for the month. This can be used to reconcile the CSN within LeaseWorks by comparing with current CSN at the beginning of the month + FC during the month</description>
    <inlineHelpText>CSN that is communicated by airline for the month. This can be used to reconcile the CSN within LeaseWorks by comparing with current CSN at the beginning of the month + FC during the month</inlineHelpText>
    <label>Airframe CSN (As Per Airline)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>