force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__APU__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__APU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>APU</label>
    <referenceTo>leaseworks__Constituent_Assembly__c</referenceTo>
    <relationshipLabel>Utilization Staging</relationshipLabel>
    <relationshipName>Utilization_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>