force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__CSI_Engine4__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__CSI_Engine4__c</fullName>
    <description>Cycles Since Installed</description>
    <inlineHelpText>Cycles Since Installed</inlineHelpText>
    <label>CSI (Engine4)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>