force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__Date_Payment_Due__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_Payment_Due__c</fullName>
    <label>Date Payment Due</label>
    <type>Date</type>
</CustomField>