force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__Eng1_EGT_Margin_Cruise__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Eng1_EGT_Margin_Cruise__c</fullName>
    <label>Eng1 - EGT Margin (Cruise)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>