force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__Eng1_Fan_Speed_N1__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Eng1_Fan_Speed_N1__c</fullName>
    <label>Eng1 - Fan Speed (N1)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>