force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__Eng2_Derate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Eng2_Derate__c</fullName>
    <label>Eng2 - Derate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>