force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__Eng3_Fuel_Flow__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Eng3_Fuel_Flow__c</fullName>
    <label>Eng3 - Fuel Flow</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>