force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__Engine1_TSN_as_per_Airline__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine1_TSN_as_per_Airline__c</fullName>
    <description>TSN that is communicated by airline for the month. This can be used to reconcile the TSN within LeaseWorks by comparing with current TSN at the beginning of the month + FH during the month</description>
    <inlineHelpText>TSN that is communicated by airline for the month. This can be used to reconcile the TSN within LeaseWorks by comparing with current TSN at the beginning of the month + FH during the month</inlineHelpText>
    <label>Engine1 TSN (As Per Airline)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>