force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__Engine_1__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engine 1</label>
    <referenceTo>leaseworks__Constituent_Assembly__c</referenceTo>
    <relationshipLabel>Utilization Staging (Engine 1)</relationshipLabel>
    <relationshipName>Utilization_Staging2</relationshipName>
    <type>Lookup</type>
</CustomField>