force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__Engine_1_Ratio_Table__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_1_Ratio_Table__c</fullName>
    <description>Enter only if the Ratio Table had been updated in this month. All subsequent months will use this Ratio Table if this field is blank.</description>
    <inlineHelpText>Enter only if the Ratio Table had been updated in this month. All subsequent months will use this Ratio Table if this field is blank.</inlineHelpText>
    <label>Engine 1 Ratio Table</label>
    <length>100</length>
    <type>Text</type>
</CustomField>