force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__Engine_3_Thrust_Setting__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_3_Thrust_Setting__c</fullName>
    <description>Enter only if the Thrust Setting had been updated in this month. All subsequent months will use this Thrust Setting if this field is blank.</description>
    <inlineHelpText>Enter only if the Thrust Setting had been updated in this month. All subsequent months will use this Thrust Setting if this field is blank.</inlineHelpText>
    <label>Engine 3 Thrust Setting</label>
    <length>100</length>
    <type>Text</type>
</CustomField>