force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__FC_Landing_Gear_RW__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__FC_Landing_Gear_RW__c</fullName>
    <label>FC (Landing Gear - RW)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>