force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__FH_Landing_Gear_RM__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__FH_Landing_Gear_RM__c</fullName>
    <label>FH (Landing Gear - RM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>