force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__Hours_During_Month_Engine2__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Hours_During_Month_Engine2__c</fullName>
    <label>FH (Engine 2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>