force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__Hours_During_Month_Landing_Gear__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Hours_During_Month_Landing_Gear__c</fullName>
    <label>FH (Landing Gear - Nose)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>