force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Amount__c</fullName>
    <label>Invoiced Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>