force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__Landing_Gear_Center__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Landing_Gear_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Landing Gear - Center</label>
    <referenceTo>leaseworks__Constituent_Assembly__c</referenceTo>
    <relationshipLabel>Utilization Staging (Landing Gear - Center)</relationshipLabel>
    <relationshipName>Utilization_Staging10</relationshipName>
    <type>Lookup</type>
</CustomField>