force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__Landing_Gear_LW__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Landing_Gear_LW__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Landing Gear - LW</label>
    <referenceTo>leaseworks__Constituent_Assembly__c</referenceTo>
    <relationshipLabel>Utilization Staging (Landing Gear - LW)</relationshipLabel>
    <relationshipName>Utilization_Staging7</relationshipName>
    <type>Lookup</type>
</CustomField>