force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__Landing_Gear_RM__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Landing_Gear_RM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Landing Gear - RM</label>
    <referenceTo>leaseworks__Constituent_Assembly__c</referenceTo>
    <relationshipLabel>Utilization Staging (Landing Gear - RM)</relationshipLabel>
    <relationshipName>Utilization_Staginga53z</relationshipName>
    <type>Lookup</type>
</CustomField>