force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__Lease_UR_Staging__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease_UR_Staging__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lease</label>
    <referenceTo>leaseworks__Lease__c</referenceTo>
    <relationshipLabel>Utilization Staging</relationshipLabel>
    <relationshipName>Utilization_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>