force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__Legacy__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Legacy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark this as true for the legacy data.</description>
    <inlineHelpText>Mark this as true for the legacy data.</inlineHelpText>
    <label>Legacy</label>
    <type>Checkbox</type>
</CustomField>