force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__LG_LW_TSN_As_Per_Airline__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__LG_LW_TSN_As_Per_Airline__c</fullName>
    <label>LG - LW TSN (As Per Airline)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>