force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__MR_Invoice_line_Items__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MR_Invoice_line_Items__c</fullName>
    <description>The supplemental rent ID and the amount should be entered here in this format (a373w000002zLz1AAE:3000, a373w000002zLz1AAF:1200) for the legacy invoices to upload the correct MR invoices.</description>
    <inlineHelpText>The supplemental rent ID and the amount should be entered here in this format (a373w000002zLz1AAE:3000, a373w000002zLz1AAF:1200) for the legacy invoices to upload the correct MR invoices.</inlineHelpText>
    <label>MR Invoice line Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>