force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payment_Date__c</fullName>
    <label>Payment Received Date</label>
    <type>Date</type>
</CustomField>