force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__Show_Submit_Utilization_Message__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Show_Submit_Utilization_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to show/hide the message when user saves the utilization.</description>
    <label>Show Submit Utilization Message</label>
    <type>Checkbox</type>
</CustomField>