force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__TSI_Airframe__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__TSI_Airframe__c</fullName>
    <description>Time Since Installed</description>
    <inlineHelpText>Time Since Installed</inlineHelpText>
    <label>TSI (Airframe)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>