force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__Utilization__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Utilization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Refers to the utilization record created for the staging object.</description>
    <label>Utilization</label>
    <referenceTo>leaseworks__Utilization_Report__c</referenceTo>
    <relationshipLabel>Utilization Staging (Utilization)</relationshipLabel>
    <relationshipName>Utilization_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>