force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__Y_hidden_Lease_id__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_hidden_Lease_id__c</fullName>
    <formula>leaseworks__Aircraft__r.leaseworks__Lease__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Lease id</label>
    <type>Text</type>
</CustomField>