force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/fields/leaseworks__Y_Hidden_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Process_Status__c</fullName>
    <defaultValue>&#39;NEW&#39;</defaultValue>
    <label>_Process Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>