force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/validationRules/leaseworks__Payment_Date_earlier_than_Invoice_date.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Payment_Date_earlier_than_Invoice_date</fullName>
    <active>true</active>
    <errorConditionFormula>leaseworks__Date_Payment_Due__c &lt;leaseworks__Invoice_Date__c</errorConditionFormula>
    <errorDisplayField>leaseworks__Date_Payment_Due__c</errorDisplayField>
    <errorMessage>Date Payment Due is earlier than the Invoice Date. In order to proceed, please update the values so that the Date Payment Due is later than the Invoice Date.</errorMessage>
</ValidationRule>