force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/validationRules/leaseworks__Restrict_Edit_OnCompletedRecord.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Restrict_Edit_OnCompletedRecord</fullName>
    <active>true</active>
    <description>Do not allow modifying the values of a utilization staging record in complete status.</description>
    <errorConditionFormula>!ISNEW() &amp;&amp; ISPICKVAL(PRIORVALUE(leaseworks__Staging_Status__c),&quot;Complete&quot;)</errorConditionFormula>
    <errorMessage>Editing Complete records is not allowed as it is saved as a history log</errorMessage>
</ValidationRule>