force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/validationRules/leaseworks__Value_cannot_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Value_cannot_be_negative</fullName>
    <active>true</active>
    <errorConditionFormula>OR(leaseworks__Airframe_Cycles_Landing_During_Month__c &lt;0 , leaseworks__Cycles_During_Month_APU__c &lt;0 ,  CONTAINS(leaseworks__FH_String__c , &quot;-&quot;),   leaseworks__Hours_During_Month_APU__c &lt;0, leaseworks__Cycles_During_Month_Engine1__c &lt;0, leaseworks__Cycles_During_Month_Engine2__c &lt;0, leaseworks__Cycles_During_Month_Engine3__c &lt;0, leaseworks__Cycles_During_Month_Engine4__c &lt;0, leaseworks__Cycles_During_Month_Landing_Gear__c &lt;0, leaseworks__FC_Landing_Gear_LM__c &lt;0, leaseworks__FC_Landing_Gear_LW__c &lt;0, leaseworks__FC_Landing_Gear_RM__c&lt;0 , leaseworks__FC_Landing_Gear_RW__c &lt;0, leaseworks__Hours_During_Month_Engine1__c &lt;0, leaseworks__Hours_During_Month_Engine2__c &lt;0, leaseworks__Hours_During_Month_Engine3__c &lt;0,  leaseworks__Hours_During_Month_Engine4__c &lt;0, leaseworks__Hours_During_Month_Landing_Gear__c &lt;0, leaseworks__FH_Landing_Gear_LM__c &lt;0, leaseworks__FH_Landing_Gear_LW__c &lt;0, leaseworks__FH_Landing_Gear_RM__c &lt;0, leaseworks__FH_Landing_Gear_RW__c &lt;0 )</errorConditionFormula>
    <errorMessage>Value should be equal or above zero</errorMessage>
</ValidationRule>