force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/validationRules/Validate_Lease_Type_local.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Lease_Type_local</fullName>
    <active>false</active>
    <description>Utilization cannot be created for Non-Lease Agreement contract.</description>
    <errorConditionFormula>AND(! $Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c
,leaseworks__Lease_UR_Staging__r.RecordType.DeveloperName == &apos;Non_Lease_Agreement&apos;)</errorConditionFormula>
    <errorMessage>Utilization cannot be created for Non-Lease Agreement contract.</errorMessage>
</ValidationRule>