force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Aircraft__c</columns>
    <columns>leaseworks__Lease_UR_Staging__c</columns>
    <columns>leaseworks__Month_Ending__c</columns>
    <columns>leaseworks__Staging_Status__c</columns>
    <columns>leaseworks__Status_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>