force-app/main/default/objects/leaseworks__Utilization_Report_Staging__c/listViews/Completed.listView-meta.xml
<ListView>
    <fullName>Completed</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Aircraft__c</columns>
    <columns>leaseworks__Lease_UR_Staging__c</columns>
    <columns>leaseworks__Month_Ending__c</columns>
    <columns>leaseworks__Staging_Status__c</columns>
    <columns>leaseworks__Status_Comments__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>leaseworks__Staging_Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Completed</label>
</ListView>